# typegrams

./: .gitignore  LICENSE  README.md  default.nix  shell.nix  stack.yaml  typegrams.cabal
app/: Main.hs
client/: Main.hs
server/: Main.hs
src/: Interp.hs
