name:                typegrams
version:             0.1.0.0
synopsis:            Type visualizations
description:         Please see README.md
homepage:            http://github.com/sleexyz/typegrams
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Sean Lee
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Interp
  build-depends:       base >= 4.7 && < 5
                     , haskell-src-exts
                     , hint
                     , pretty-show
  default-language:    Haskell2010

executable typegrams-server
  hs-source-dirs:      server
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , typegrams

  default-language:    Haskell2010

-- executable typegrams-client
--   hs-source-dirs:      client
--   main-is:             Main.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   build-depends:       base
--                      , typegrams
--                      --, reflex-dom
--                      --, reflex
--                      , transformers

  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sleexyz/typegrams
